# ccutils

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  _build.sh  _build_docs.sh  _header_guards_regen.py
_tests_and_examples/akigo_net_test01/: CMakeCache.txt  _build_cc.sh  t_net_unix_server_cc.cpp
_tests_and_examples/akigo_test01/: CMakeLists.txt  t_net_unix_server_cc.cpp
_tests_and_examples/ip_test01/: CMakeLists.txt  t.cpp  tests_main.cpp
_tests_and_examples/json_test01/: CMakeLists.txt  _build.sh  t.cpp  tests_main.cpp
_tests_and_examples/regexp_test01/: CMakeLists.txt  _build.sh  ip_addr_text.cpp  main_tests.cpp  t.cpp
_tests_and_examples/test_suite_tool_test01/: README.md  main_001.cpp  main_002.cpp  main_003_unicode.cpp
_tests_and_examples/test_worker01/: CMakeLists.txt  t.cpp
_tests_and_examples/unicode_test01/: CMakeLists.txt  _build.sh  main_tests.cpp  t.cpp
akigo/: PosixFDCtlNetConnAdapter.cpp  PosixFDCtlNetConnAdapter.hpp  _pkg.hpp  akigo.hpp  builtin.cpp  builtin.hpp  builtin_slice.hpp  context.cpp  context.hpp  errors.hpp  io.cpp  io.hpp  net.any.linux-gnu.cpp  net.any.linux-gnu.hpp  net.cpp  net.hpp  net.linux-gnu.cpp  net.linux-gnu.hpp  net_UNIX.cpp  net_UNIX.hpp  net_code.any.linux-gnu.hpp  net_tcp.any.gnu-linux.hpp  net_tcp.hpp  net_udp.any.gnu-linux.hpp  net_udp.hpp  net_unix.any.linux-gnu.cpp  net_unix.any.linux-gnu.hpp  net_unix.cpp  net_unix.hpp  os.any.linux-gnu.cpp  os.cpp  os.hpp  os.linux-gnu.cpp  time.cpp  time.hpp
ccucts/: _import_me.cmake  ccucts_define_package.cmake  ccucts_detect_cpu_os.cmake
cmake_scripts/: ccutils_define_package.cmake  ccutils_definine_package.cmake  ccutils_detect_cpu_os.cmake  ccutils_unicode_backend_selector.cmake  create_ccutils_component.cmake
errors/: e.cpp  e.hpp
fint/: fint.hpp
io_tools/: utils.cpp  utils.hpp
ip/: ip.cpp  ip.hpp
json/: json.cpp  json.hpp
logger/: logger.cpp  logger.hpp
posix_tools/: FDAddress.cpp  FDAddress.hpp  FDCtl.cpp  FDCtl.hpp  FDCtl.linux-gnu.hpp
regexp/: regexp.cpp  regexp.hpp  regexp_fds_and_enums.cpp  regexp_fds_and_enums.hpp
repr/: repr.cpp  repr.hpp
signal/: signal.cpp  signal.hpp  signal_sigc_compat.cpp  signal_sigc_compat.hpp
test_suite_tool/: README.md  tst.cpp  tst.hpp
tests/akigo_test01/: CMakeLists.txt  t_net_unix_client.go  t_net_unix_server.go  t_net_unix_server_cc.cpp
tests/io_tools01/: CMakeLists.txt  t.cpp
tests/ip_test01/: t.cpp
tests/test_suite_tool_test01/: CMakeLists.txt  build.sh  main_001.cpp  main_002.cpp  main_003_unicode.cpp  t.cpp
tests/test_worker01/: t.cpp
tests/unicode_test/: CMakeLists.txt  t.cpp
tests/unicode_test01/: main_tests.cpp
unicode/: u.cpp  u.hpp  u_backend_base.hpp
unicode_backend_ccutils/: ccuub_ccutils.hpp  ccuub_ccutils_generated_char_db.hpp  ccuub_ccutils_generated_types.hpp  u_backend.hpp
unicode_backend_ccutils_codegen/: CMakeLists.txt  README.md  main.cpp
unicode_backend_icu/: u_backend.cpp  u_backend.hpp
utils/: cf.cpp  cf.hpp  concepts.hpp
worker01/: Worker01.cpp  Worker01.hpp
